--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,4 +19,11 @@ layout: archive
   {% endfor %}
 </div>
 
+<!-- written by jin -->
+<div>
+  <div class="col-lg-4 col-md-2">
+    {% include category.html type=entries_layout %}
+  </div>
+</div>
+
 {% include paginator.html %}
