--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@ layout: archive
 <!-- written by jin -->
 <div>
   <div class="col-lg-4 col-md-2">
-    {% include category.html type=entries_layout %}
+    {% include categories.html type=entries_layout %}
   </div>
 </div>
 
