--- a/_sass/minimal-mistakes/skins/_default.scss
+++ b/_sass/minimal-mistakes/skins/_default.scss
@@ -3,3 +3,10 @@
    ========================================================================== */
 
 // Intentionally left blank
+
+
+$link-color: #314549 !default;
+
+.page__title{
+   color: $link-color;
+ }
